# audit-intelligence-v2

./: .dockerignore  .env.alternate-ports  .env.development  .env.docker  .env.example  .env.new  .env.production  .env.production.new  .eslintrc.cjs  .gitignore  01_项目实施计划_WBS.md  02_RACI责任矩阵.md  03_里程碑与风险登记册.md  AI服务配置说明.md  BRANCH_DESCRIPTION.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.backend.v2  Dockerfile.frontend  GIT_CLEAN_COMMIT_PLAN.md  GIT_PUSH_INSTRUCTIONS.md  Git提交完整指南.md  INSTALL_DEPENDENCIES.sh  KNOWN_ISSUES.md  P0功能开发推进计划.md  P0核心功能开发完成报告.md  PUSH_INSTRUCTIONS.md  PUSH_TO_REMOTE.md  Phase_C_新审计节点开发计划.md  Phase_C节点开发说明.md  QUICK_STATUS.md  README.md  README_DOCS.md  ROADMAP.md  RelatedPartyTransactionNode_最终版本.md  RelatedPartyTransactionNode实现总结.md  START_HERE.md  (+68 more)
backend/: .env.example  Dockerfile  NODE_FIXES_SUMMARY.md  NODE_IMPROVEMENTS_SUMMARY.md  NODE_ISSUES_REPORT.md  WORKFLOW_EXECUTION_IMPROVEMENTS.md  create_test_file.py  example_workflow.py  pyproject.toml  pyrightconfig.json  requirements.in  requirements.txt  test_all_nodes.py  test_mock_workflow.py  test_node_functionality.py  test_nodes_simple.py  test_preview_api.py  test_workflow_debug.py  verify_fixes.py  verify_node_fixes.py
backend/app/: main.py
backend/ci_artifacts/: workflow_mapping_suggestions.json
backend/sample_charts/: area_chart.json  bar_chart.json  line_chart.json  pie_chart.json  scatter_chart.json
backend/scripts/: auto_map_workflows.py  generate_workflow_mapping_suggestions.py  list_unmapped_edges.py  validate_registry.py
(+346 files in other folders)
