[project]
name = "audit-intelligence-backend"
version = "2.0.0"
description = "Audit Intelligence v2 Backend"
authors = [{name = "Audit Team", email = "team@audit.com"}]
requires-python = ">=3.9"

[tool.ruff]
# Ruff configuration
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
env = [
    "JWT_SECRET=test-secret-key-for-pytest",
    "DEBUG=true",
]
